Adding user input to the display and making CLEAR button functional

--- a/page.html
+++ b/page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="display"> DISPLAY PLACE HOLDER</div>
+        <div class="display"></div>
         <div class="buttons"></div>
     </div>
 </body>
